# apsuite

./: .gitignore  CITATION.cff  Classes.py  INSTALL  LICENSE  Makefile  README.md  VERSION  bpm2turns.py  egun-ramp.py  examples.py  functions.py  optimization.py  pyproject.toml  requirements.txt  script_injection.py  script_linac.py  set-corrs.py  setup.py  shb_opt.py  sirius-script-app-bo-cod-simulanneal.py  sirius-script-app-bo-pso-inj.py  sirius-script-app-bo-pso-inj_new.py  sirius-script-app-ps-pvsprint.py  sirius-script-bo-inj-opt-pso.py  sirius-script-bo-inj-opt-rcds.py  sirius-script-li-egun-ramp.py  sirius-script-set-energy.py  tous_analysis.py
apsuite/: __init__.py  asparams.py  image.py  insert_ids_test.py  trackcpp_utils.py  utils.py
examples/: 20_errors_seed_342080.pickle  20_errors_seed_950336.pickle  calc_dynap_ids.py  calc_dynapt_ids.py  evaluate_dynapt_ids.py  generate_random_boosters.py  generate_random_machines.py  image.py  reconstruction_from_grid.ipynb  respmats.pickle  test_WIP_lattice_errors.ipynb  test_dynapt_ids.py  test_errors.ipynb  test_errors_delta.ipynb  test_lattice_errors.ipynb  tests_class.ipynb
generic_scripts/: amp_tuneshifts_analysis.py  energy_orbit_stability_analysis.py  energy_stability_analysis.py  fit_vertical_dispersion.py  ids_feedforward_vchamber_effect.py  linear_bsc_si.py  nlk.py  script_to_get_bpms_and_corrs_prbs_levels.py  vchamber_effect_lifetime.py  vchamber_temp_excursion_induced_by_electrons.py
lattice_errors/: coupling_corrrection.py  lattice_errors.py  test_lattice_errors.ipynb
matching/: matching.py
ps-cycle/: run-all.bash  run_cycle.py
ps-pvs/: print-pvs.py  ps-pvs.txt
ps-rms/: ps_rms.py  pvs.py  qd.txt  qf.txt  sd.txt  sf.txt
tbtanalysis/: analyse_params.py  data-list.txt  lib.py  rip.py  run_analysis.py  run_chrom.py  run_espread.py  run_model.py  run_optics.py  run_pca.py  run_tbt_analysis_eqparam.py  run_tracking.py  run_tune.py  run_tuneshift.py
(+172 files in other folders)
